@@ -1090,11 +1090,9 @@ static StateResult handle_tag_name_state(
       return NEXT_CHAR;
     // xml parsing rules do not allow single or double quaotes in tag names
     case '"':
-      // fall through
     case '\'':
       tokenizer_add_parse_error(parser, GUMBO_ERR_TAG_INVALID);
-      abandon_current_tag(parser);
-      gumbo_tokenizer_set_state(parser, GUMBO_LEX_DATA);
+      append_char_to_tag_buffer(parser,'_', false);
       return NEXT_CHAR;
     default:
       append_char_to_tag_buffer(parser, gumbo_tolower(c), true);
